kubernetes/platform/development/services/yaml/catalog-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  labels:
    app: catalog-service
    service: catalog-service
    version: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
      service: catalog-service
      version: catalog 
  template:
    metadata:
      labels:
        app: catalog-service
        service: catalog-service
        version: catalog
    spec:
      containers:
        - name: catalog-service
          image: ghcr.io/gmdcjdakdcjd/catalog-service:latest
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9001
---

apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog-service
    service: catalog-service
    version: catalog
spec:
  type: ClusterIP
  selector:
    app: catalog-service
    service: catalog-service
    version: catalog
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 9001
