kubernetes/platform/development/services/yaml/postgresql.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-postgres
  labels:
    db: polar-postgres
    service: postgres
    version: postgres
spec:
  selector:
    matchLabels:
      db: polar-postgres
      service: postgres
      version: postgres
  template:
    metadata:
      labels:
        db: polar-postgres
        service: postgres
        version: postgres
    spec:
      containers:
        - name: polar-postgres
          image: postgres:14.12
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 60Mi
            limits:
              cpu: 200m
              memory: 120Mi
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-config-volume
      volumes:
        - name: postgres-config-volume
          configMap:
            name: postgres-config

---

apiVersion: v1
kind: Service
metadata:
  name: polar-postgres
  labels:
    db: polar-postgres
    version: postgres
    service: postgres
spec:
  type: ClusterIP
  selector:
    db: polar-postgres
    service: postgres
    version: postgres 
  ports:
    - protocol: TCP
      port: 5432
      name: tcp
      targetPort: 5432
