kubernetes/platform/development/services/yaml/rabbitmq.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-rabbitmq
  labels:
    db: polar-rabbitmq
    service: rabbitmq
    version: rabbitmq
spec:
  selector:
    matchLabels:
      db: polar-rabbitmq
      service: rabbitmq
      version: rabbitmq
  template:
    metadata:
      labels:
        db: polar-rabbitmq
        service: rabbitmq
        version: rabbitmq
    spec:
      containers:
        - name: polar-rabbitmq
          image: rabbitmq:3.13-management
          ports:
            - containerPort: 5672
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 150Mi
          volumeMounts:
            - mountPath: /etc/rabbitmq
              name: rabbitmq-config-volume
      volumes:
        - name: rabbitmq-config-volume
          configMap:
            name: rabbitmq-config

---

apiVersion: v1
kind: Service
metadata:
  name: polar-rabbitmq
  labels:
    db: polar-rabbitmq
    service: rabbitmq
    version: rabbitmq
spec:
  type: ClusterIP
  selector:
    db: polar-rabbitmq
    service: rabbitmq
    version: rabbitmq 
  ports:
  - name: amqp 
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
