kubernetes/platform/development/services/yaml/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-redis
  labels:
    db: polar-redis
    service: redis
    version: redis
spec:
  selector:
    matchLabels:
      db: polar-redis
      service: redis
      version: redis
  template:
    metadata:
      labels:
        db: polar-redis
        service: redis
        version: redis
    spec:
      containers:
        - name: polar-redis
          image: redis:7.2
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: polar-redis
  labels:
    db: polar-redis
    service: redis
    version: redis
spec:
  type: ClusterIP
  selector:
    db: polar-redis
    service: redis
    version: redis
  ports:
  - protocol: TCP
    port: 6379
    name: tcp
    targetPort: 6379
