kubernetes/platform/development/services/yaml/edge-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
    version: edge-service
    service: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
      version: edge-service
      service: edge-service
  template:
    metadata:
      labels:
        app: edge-service
        version: edge-service
        service: edge-service
    spec:
      containers:
        - name: edge-service
          image: ghcr.io/gmdcjdakdcjd/edge-service:latest
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
spec:
  rules:
    #    - host: ingressgateway
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polar-keycloak 
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: edge-service
  labels:
    app: edge-service
    version: edge-service 
    service: edge-service
spec:
  type: ClusterIP
  selector:
    app: edge-service
    version: edge-service
  ports:
  - protocol: TCP
    port: 80
    name: tcp
    targetPort: 9000
